# OTUS-Task1

./: CMakeLists.txt  README.md  hello_world.cpp
.github/workflows/: release.yml
test/: CMakeLists.txt  ExampleTests.cpp
